--- a/config.yml
+++ b/config.yml
@@ -11,6 +11,7 @@ pipeline:
   max_ngram: 4
 - name: DIETClassifier # Adds embeddings
   epochs: 100
+  constrain_similarities: true
 - name: EntitySynonymMapper
 
 - name: LLMCommandGenerator
