--- a/data/stories.yml
+++ b/data/stories.yml
@@ -1,7 +1,7 @@
 version: "3.1"
 
 stories:
-- story: Mitram greet and handle other queries
+- story: greet and handle other queries
   steps:
   - intent: greet
   - action: hello_world
