--- a/requirements.txt
+++ b/requirements.txt
@@ -121,3 +121,84 @@ zict==2.1.0
 zipp @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_b71z79bye2/croot/zipp_1672387125902/work
 zope.interface @ file:///Users/builder/ci_310/zope.interface_1642542202636/work
 zstandard==0.18.0
+
+httpx~=0.27.0
+future~=1.0.0
+h11~=0.14.0
+jax~=0.4.25
+numpy~=1.23.5
+scipy~=1.12.0
+rich~=13.7.0
+flatbuffers~=23.5.26
+pillow~=10.2.0
+pip~=23.0.1
+distro~=1.9.0
+wheel~=0.42.0
+filelock~=3.13.1
+rsa~=4.9
+pyasn1~=0.5.1
+toolz~=0.12.1
+blis~=0.7.11
+setuptools~=65.5.0
+fsspec~=2023.10.0
+click~=8.1.7
+PyYAML~=6.0.1
+pyarrow~=15.0.0
+pandas~=2.2.0
+gast~=0.4.0
+h5py~=3.10.0
+pytz~=2024.1
+aiohttp~=3.9.3
+pydantic~=2.6.1
+tqdm~=4.66.2
+regex~=2023.12.25
+scikit-learn~=1.4.1.post1
+joblib~=1.3.2
+SQLAlchemy~=2.0.27
+PyJWT~=2.8.0
+keras~=2.12.0
+action~=1.4.4
+langchain~=0.1.8
+jsonpatch~=1.33
+multidict~=6.0.5
+anyio~=4.3.0
+sniffio~=1.3.0
+outcome~=1.3.0.post0
+urllib3~=2.2.1
+cymem~=2.0.8
+httpcore~=1.0.4
+wrapt~=1.14.1
+mdurl~=0.1.2
+threadpoolctl~=3.3.0
+platformdirs~=3.11.0
+srsly~=2.4.8
+catalogue~=2.0.10
+evaluate~=0.4.1
+preshed~=3.0.9
+murmurhash~=1.0.10
+confection~=0.1.4
+cachetools~=5.3.2
+openai~=1.12.0
+Markdown~=3.5.2
+cloudpathlib~=0.16.0
+aiosignal~=1.3.1
+frozenlist~=1.4.1
+tzdata~=2024.1
+datasets~=2.17.1
+wcwidth~=0.2.13
+marshmallow~=3.20.2
+greenlet~=3.0.3
+oauthlib~=3.2.2
+blinker~=1.7.0
+validators~=0.22.0
+werkzeug~=3.0.1
+zipp~=3.17.0
+selenium~=4.18.1
+langsmith~=0.1.5
+streamlit~=1.31.1
+responses~=0.18.0
+sgmllib3k~=1.0.0
+jsonpointer~=2.4
+astunparse~=1.6.3
+dill~=0.3.8
+feedparser~=6.0.11
