--- a/data/flows.yml
+++ b/data/flows.yml
@@ -8,7 +8,16 @@ flows:
     description: news
     name: news
     steps:
-      - action: action_fetch_news
+        - action: action_fetch_news
+  respond_to_question:
+    description: ask any questions
+    name: questions
+    source:
+      intent: ask_question  # Or your question-asking intent
+      stages:
+        - stage: respond
+    steps:
+        - action: utter_answer
 #    description: Mitram Addressing FAQ
 #    name: mitram_pattern search
 #    steps:
