--- a/domain.yml
+++ b/domain.yml
@@ -2,6 +2,8 @@ version: "3.1"
 intents:
   - greet
   - get_news
+  - ask_question
 actions:
   - hello_world
   - action_fetch_news
+  - utter_answer
