--- a/data/flows.yml
+++ b/data/flows.yml
@@ -13,7 +13,7 @@ flows:
     description: ask any questions
     name: questions
     steps:
-        - action: utter_answer
+        - action: action_utter_answer
 #    description: Mitram Addressing FAQ
 #    name: mitram_pattern search
 #    steps:
