--- a/domain.yml
+++ b/domain.yml
@@ -1,9 +1,38 @@
 version: "3.1"
+
 intents:
   - greet
   - get_news
   - ask_question
+  - schedule_medication
+  - EXTERNAL_reminder_callback
 actions:
   - hello_world
   - action_fetch_news
   - action_custom_knowledge_answer
+  - action_fetch_weather
+  - action_notify_medication
+  - action_schedule_medication_reminder
+responses:
+  utter_time_for_medication:
+    - text: "It's time for your medication."
+rules:
+  - rule: Schedule medication reminder
+    steps:
+      - intent: schedule_medication
+      - action: action_schedule_medication_reminder
+
+  - rule: reminder callback
+    steps:
+        - intent: EXTERNAL_reminder_callback
+        - action: action_notify_medication
+entities:
+  - reminder_name
+slots:
+  reminder_name:
+    type: text
+    influence_conversation: false
+
+  reminder_content:
+    type: text
+    influence_conversation: false  # modify this according to your requirement
